# eSRO

./: CMakeLists.txt  LICENSE.HEADER  README.md
AgentServer/: AgentServer.pro  AgentServer.pro.user.1.3  CMakeLists.txt  Makefile  broadcast.hpp  client_connection.cpp  client_connection.hpp  drop.hpp  emote_actions.hpp  formulas.cpp  formulas.hpp  login_request.hpp  main.cpp  near_objects.hpp  opcodes_client.hpp  serv.conf  server.cpp  server.hpp  server_channel.cpp  server_channel.hpp  server_connection.cpp  server_connection.hpp  server_state_game.cpp  server_state_game.hpp  server_state_handshake.cpp  server_state_handshake.hpp  server_state_lobby.cpp  server_state_lobby.hpp  server_state_login.cpp  server_state_login.hpp  stallnetwork.hpp  state_handshake.cpp  state_handshake.hpp  state_master.cpp  state_master.hpp  task_background.hpp  world.cpp  world.hpp  zone.cpp  zone.hpp
AgentServer/handler/: CMakeLists.txt  handler_academy.cpp  handler_alchemy.cpp  handler_block.cpp  handler_exchange.cpp  handler_fortress.cpp  handler_friend.cpp  handler_gm.cpp  handler_guild.cpp  handler_invite.cpp  handler_item.cpp  handler_job.cpp  handler_login.cpp  handler_logout.cpp  handler_msg.cpp  handler_offline_msg.cpp  handler_party.cpp  handler_player.cpp  handler_quest_event.cpp  handler_settings.cpp  handler_skill.cpp  handler_stall.cpp  handler_stats.cpp  handler_storage.cpp  handler_talk.cpp  handler_teleport.cpp  handler_transport.cpp  handler_union.cpp
AgentServer/manager/: CMakeLists.txt  academy_manager.cpp  academy_manager.hpp  event_manager.cpp  event_manager.hpp  fortress_manager.cpp  fortress_manager.hpp  friend_manager.cpp  friend_manager.hpp  guild_manager.cpp  guild_manager.hpp  map_manager.cpp  map_manager.hpp  party_manager.cpp  party_manager.hpp  resource_manager.cpp  resource_manager.hpp  script_manager.cpp  script_manager.hpp  skill_manager.cpp  skill_manager.hpp  stall_manager.cpp  stall_manager.hpp  trade_manager.cpp  trade_manager.hpp  union_manager.cpp  union_manager.hpp  weather_manager.cpp  weather_manager.hpp
AgentServer/query/: CMakeLists.txt  academy_query.hpp  alliance_query.cpp  alliance_query.hpp  block_query.cpp  block_query.hpp  connection.cpp  connection.hpp  drop_query.cpp  drop_query.hpp  friend_query.cpp  friend_query.hpp  guild_member_query.cpp  guild_member_query.hpp  guild_query.cpp  guild_query.hpp  hotkeys_query.cpp  hotkeys_query.hpp  ip_query.cpp  ip_query.hpp  item_query.cpp  item_query.hpp  job_query.cpp  job_query.hpp  manager_query.cpp  manager_query.hpp  mastery_query.cpp  mastery_query.hpp  message_query.cpp  message_query.hpp  player_query.cpp  player_query.hpp  shop_query.cpp  shop_query.hpp  skill_query.cpp  skill_query.hpp
EPL/src/: CMakeLists.txt  packet_academy.cpp  packet_alliance.cpp  packet_attack.cpp  packet_base_item.cpp  packet_block.cpp  packet_exchange.cpp  packet_fortress.cpp  packet_friend.cpp  packet_guild.cpp  packet_invitation.cpp  packet_item.cpp  packet_job.cpp  packet_lobby.cpp  packet_login.cpp  packet_mastery.cpp  packet_message.cpp  packet_misc.cpp  packet_msg.cpp  packet_npc.cpp  packet_party.cpp  packet_player.cpp  packet_shard.cpp  packet_skill.cpp  packet_spawn.cpp  packet_stall.cpp  packet_storage.cpp  packet_talk.cpp  packet_teleport.cpp  packet_transport.cpp  packet_tutorial.cpp  packet_uniques.cpp
GatewayServer/: CMakeLists.txt  GatewayServer.pro  Makefile  client_connection.cpp  client_connection.hpp  main.cpp  serv.conf  server.cpp  server.hpp  server_connection.cpp  server_connection.hpp  server_state_handshake.cpp  server_state_handshake.hpp  server_state_login.cpp  server_state_login.hpp  server_state_version.cpp  server_state_version.hpp  state_handshake.cpp  state_handshake.hpp  state_master.cpp  state_master.hpp
GatewayServer/packet/: CMakeLists.txt  packet_gateway.cpp  packet_gateway.hpp  packet_information.cpp  packet_information.hpp
MasterServer/: CMakeLists.txt  Makefile  MasterServer.pro  connection.cpp  connection.hpp  main.cpp  opcodes_client.hpp  serv.conf  server.cpp  server.hpp  state_agent.cpp  state_agent.hpp  state_download.cpp  state_download.hpp  state_emblem.cpp  state_emblem.hpp  state_gateway.cpp  state_gateway.hpp  state_handshake.cpp  state_handshake.hpp  state_shard.cpp  state_shard.hpp
MasterServer/packet/: CMakeLists.txt  packet_manager_gateway.cpp  packet_manager_gateway.hpp  packet_manager_shard.cpp  packet_manager_shard.hpp
MasterServer/query/: CMakeLists.txt  account_query.cpp  account_query.hpp  manager_query.cpp  manager_query.hpp
SOL/src/: CMakeLists.txt  academy.cpp  character_factory.cpp  coord.cpp  entity_property.cpp  guild.cpp  guild_member.cpp  interactive_npc.cpp  item.cpp  item_factory.cpp  item_property.cpp  job.cpp  market_stock.cpp  mastery.cpp  mastery_tree.cpp  mob.cpp  npc.cpp  npc_util.cpp  object.cpp  party.cpp  party_entry.cpp  player.cpp  player_property.cpp  skill.cpp  skill_buff.cpp  skill_builder.cpp  skill_status.cpp  spawnobject.cpp  stall.cpp  storage.cpp  transport.cpp  union.cpp
SRNL/src/: CMakeLists.txt  client_connection_interface.cpp  client_connection_state.cpp  client_state_handshake_interface.cpp  packet.cpp  packet_authentication.cpp  packet_util_functions.cpp  security.cpp  server_connection_interface.cpp  server_connection_state.cpp  server_interface.cpp  server_state_handshake_interface.cpp
khamaileon/: CMakeLists.txt  khamaileon.pro  khamaileon.pro.user.1.3
khamaileon/include/: line.hpp  model.hpp  model_manager.hpp  model_mesh.hpp  model_mesh_collision.hpp  navigation_cell.hpp  navigation_entity.hpp  navigation_mesh.hpp  parser_manager.hpp  ray.hpp  rectangle.hpp  rtree.hpp  segment.hpp  strutil.hpp  teleport.hpp  texture_manager.hpp  triangle.hpp  vector.hpp
khamaileon/include/parser/: characterdata.hpp  itemdata.hpp  leveldata.hpp  levelgold.hpp  npcpos.hpp  (+14 more)
khamaileon/src/: line.cpp  model.cpp  model_manager.cpp  model_mesh.cpp  model_mesh_collision.cpp  navigation_cell.cpp  navigation_entity.cpp  navigation_mesh.cpp  parser_manager.cpp  rectangle.cpp  rtree.cpp  strutil.cpp  texture_manager.cpp
(+286 files in other folders)
