add_library (agenthandler STATIC handler_academy.cpp handler_alchemy handler_block.cpp handler_exchange.cpp handler_fortress.cpp 
	handler_friend.cpp handler_gm.cpp handler_guild.cpp handler_invite.cpp handler_item.cpp handler_job.cpp handler_login.cpp 
	handler_logout.cpp handler_msg.cpp handler_offline_msg.cpp handler_party.cpp handler_player.cpp handler_quest_event.cpp handler_settings.cpp
	handler_skill.cpp handler_stall.cpp handler_stats.cpp handler_storage.cpp handler_talk.cpp handler_teleport.cpp handler_transport.cpp 
	handler_union.cpp)

