add_library (EPL STATIC packet_academy.cpp packet_alliance.cpp packet_attack.cpp packet_base_item.cpp packet_block.cpp 
	packet_exchange.cpp packet_fortress.cpp packet_friend.cpp packet_guild.cpp packet_invitation.cpp packet_item.cpp packet_job.cpp
	packet_lobby.cpp packet_login.cpp packet_mastery.cpp packet_message.cpp packet_misc.cpp packet_msg.cpp packet_npc.cpp packet_party.cpp
	packet_player.cpp packet_shard.cpp packet_skill.cpp packet_spawn.cpp packet_stall.cpp packet_storage.cpp packet_talk.cpp packet_teleport.cpp
	packet_transport.cpp packet_tutorial.cpp packet_uniques.cpp)
