add_library (SOL STATIC academy.cpp character_factory.cpp coord.cpp entity_property.cpp guild.cpp guild_member.cpp interactive_npc.cpp item.cpp 
    item_factory.cpp item_property.cpp job.cpp mastery.cpp mastery_tree.cpp mob.cpp npc.cpp npc_util.cpp object.cpp party.cpp party_entry.cpp
	player.cpp player_property.cpp skill.cpp skill_buff.cpp skill_builder.cpp skill_status.cpp spawnobject.cpp stall.cpp storage.cpp transport.cpp 
    union.cpp market_stock.cpp)
