add_library(khama_parsers characterdata.cpp itemdata.cpp leveldata.cpp levelgold.cpp npcpos.cpp refmappingshopgroup.cpp
    refmappingshopwithtab.cpp refpackageitem.cpp refpricepolicyofitem.cpp refscrapofpackageitem.cpp refshopgoods.cpp
    refshopgroup.cpp refshoptab.cpp skilldata.cpp teleportbuilding.cpp teleportdata.cpp teleportlink.cpp
    teleportoptional.cpp siegefortress.cpp)
